--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -37,6 +37,14 @@ All non-theme variables
 	line-height: @default-line-height;
 }
 
+@font-face {
+    font-family: "Avenir W01";
+    src:url("../fonts/avenir-w01.ttf") format("truetype"),
+    url("../fonts/avenir-w01.woff") format("woff"),
+    url("../fonts/avenir-w01.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
 
 /*************** Palette ***************/
 
